# src/app/modules/openapi/api/user-controller2.serviceInterface.ts
@@ -50,8 +50,9 @@ export interface UserController2ServiceInterface {
      * @param role Filter by user role
      * @param job Filter by job
      * @param phone Filter by phone number
-     * @param creditLimit Filter by credit limit
+     * @param creditLimitMin Filter by credit minim limit
+     * @param creditLimitMax Filter by credit maximum limit
      */
-    users(pageNum?: number, pageSize?: number, sortField?: 'BD' | 'role' | 'phone' | 'creditLimit' | 'userName' | 'job' | 'userId' | 'email', sortDir?: 'asc' | 'desc', keyword?: any, userId?: any, userName?: any, email?: any, role?: 'USER' | 'ADMIN', job?: any, phone?: any, creditLimit?: any, extraHttpRequestParams?: any): Observable<PagedResponseUserDTO>;
+    users(pageNum?: number, pageSize?: number, sortField?: 'BD' | 'role' | 'phone' | 'creditLimit' | 'userName' | 'job' | 'userId' | 'email', sortDir?: 'asc' | 'desc', keyword?: any, userId?: any, userName?: any, email?: any, role?: 'USER' | 'ADMIN', job?: any, phone?: any, creditLimitMin?: any, creditLimitMax?: any, extraHttpRequestParams?: any): Observable<PagedResponseUserDTO>;
 
 }
