# src/app/modules/openapi/model/order-details-stats-projection.ts
@@ -10,8 +10,8 @@
 
 
 export interface OrderDetailsStatsProjection { 
+    totalItemsSold?: number;
     averageItemPrice?: number;
     averageItemsPerOrder?: number;
-    totalItemsSold?: number;
 }
 
