# src/app/modules/openapi/model/top-customers-projection.ts
@@ -10,10 +10,10 @@
 
 
 export interface TopCustomersProjection { 
-    userName?: string;
     userId?: number;
     email?: string;
     totalOrders?: number;
     totalSpent?: number;
+    userName?: string;
 }
 
